# QField

./: .clang-format  .gitignore  .pre-commit-config.yaml  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  publiccode.yml  vcpkg.json
.github/workflows/: android.yml
.tx/: config
cmake/: Package.cmake  VcpkgToolchain.cmake
doc/: dev.md
fastlane/: Fastfile  Matchfile
i18n/: smartfield_ar.ts  smartfield_bg.ts  smartfield_bs.ts  smartfield_cs.ts  smartfield_de.ts  smartfield_en.ts  smartfield_es.ts  smartfield_fi.ts  smartfield_fr.ts  smartfield_gl.ts  smartfield_hr.ts  smartfield_hu.ts  smartfield_id.ts  smartfield_it.ts  smartfield_ja.ts  smartfield_ka.ts  smartfield_ko.ts  smartfield_nl.ts  smartfield_pl.ts  smartfield_pt.ts  smartfield_pt_BR.ts  smartfield_ro.ts  smartfield_ru.ts  smartfield_sk.ts  smartfield_sl.ts  smartfield_tr.ts  smartfield_uk.ts  smartfield_zh.ts
images/: images.qrc  logo.qrc.in
platform/android/: AndroidManifest.xml.in  CPackAndroidDeployQt.cmake.in
platform/android/res/values-ar/: strings.xml
platform/android/res/values-bg/: strings.xml
platform/android/res/values-bs/: strings.xml
platform/android/res/values-cs/: strings.xml
platform/android/res/values-de/: strings.xml
platform/android/res/values-es/: strings.xml
platform/android/res/values-eu/: strings.xml
platform/android/res/values-fi/: strings.xml
platform/android/res/values-fr/: strings.xml
platform/android/res/values-gl/: strings.xml
platform/android/res/values-hr/: strings.xml
platform/android/res/values-hu/: strings.xml
platform/android/res/values-id/: strings.xml
platform/android/res/values-it/: strings.xml
platform/android/res/values-ja/: strings.xml
platform/android/res/values-ka/: strings.xml
platform/android/res/values-ko/: strings.xml
platform/android/res/values-lv/: strings.xml
platform/android/res/values-nl/: strings.xml
platform/android/res/values-pl/: strings.xml
platform/android/res/values-pt-rBR/: strings.xml
platform/ios/: CPackIosDeployIpa.cmake.in  LaunchScreen.storyboard
platform/linux/: CPackLinuxDeployQt.cmake.in  smartfield.desktop  smartfield.metainfo.xml
platform/macos/: CPackMacDeployQt.cmake.in
platform/windows/: appicon.rc.in
resources/sample_projects/: live_smartfield_users_survey.qgs
scripts/: build-vcpkg.sh  build.sh  copy-material-icons.sh  create-images.sh  docker-build-wrapper.sh  mac_deploy.sh  run-dev-docker.sh
scripts/ci/: docker_pull.sh  env_gh.sh  generate-version-details.sh  pull_translations.sh  update-translations.sh  upload_artifacts.sh
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  appinterface.cpp  appinterface.h  attributeformmodelbase.cpp  changelogcontents.cpp  changelogcontents.h  clipboardmanager.cpp  deltafilewrapper.cpp  digitizinglogger.cpp  digitizinglogger.h  featuremodel.cpp  featuremodel.h  identifytool.cpp  layerobserver.cpp  layertreemodel.cpp  localfilesimageprovider.cpp  localfilesmodel.cpp  multifeaturelistmodelbase.cpp  navigationmodel.cpp  orderedrelationmodel.cpp  peliasgeocoder.h  pluginmanager.cpp  projectinfo.cpp  projectinfo.h  projectsimageprovider.cpp  qgismobileapp.cpp  qgismobileapp.h  recentprojectlistmodel.cpp  referencingfeaturelistmodel.cpp  referencingfeaturelistmodel.h  rubberbandmodel.h  smartcloudconnection.cpp  smartcloudconnection.h  smartcloudprojectsmodel.cpp  smartcloudprojectsmodel.h  smartfield.h.in  smartfieldappauthrequesthandler.cpp  smartfieldappauthrequesthandler.h  trackingmodel.cpp  vertexmodel.h
src/core/locator/: helplocatorfilter.cpp  helplocatorfilter.h  locatormodelsuperbridge.cpp  locatormodelsuperbridge.h
src/core/positioning/: geofencer.cpp  positioningdevicemodel.cpp
src/core/processing/: processingalgorithmparametersmodel.h  processingalgorithmsmodel.h
src/core/qgsquick/: qgsquickmapsettings.h
src/core/utils/: coordinatereferencesystemutils.h  expressioncontextutils.h  featureutils.h  fileutils.cpp  fileutils.h  geometryutils.h  layerutils.cpp  positioningutils.h  projectutils.h  smartcloudutils.cpp  smartcloudutils.h  stringutils.cpp  stringutils.h  urlutils.h
src/qml/: About.qml  BadLayerItem.qml  BluetoothDeviceChooser.qml  BookmarkHighlight.qml  BookmarkProperties.qml  BookmarkRenderer.qml  BrowserPanel.qml  BusyOverlay.qml  CMakeLists.txt  Changelog.qml  CodeReader.qml  ConfirmationToolbar.qml  CoordinateLocator.qml  DashBoard.qml  DigitizingToolbar.qml  ElevationProfile.qml  EmbeddedFeatureForm.qml  FeatureForm.qml  FeatureListForm.qml  FeatureListSelectionHighlight.qml  GeometryEditorsToolbar.qml  GeometryHighlighter.qml  GeometryRenderer.qml  ImageDial.qml  InformationDrawer.qml  LayerLoginDialog.qml  LayerTreeItemProperties.qml  Legend.qml  LinePolygon.qml  LocatorItem.qml  LocatorSettings.qml  MapCanvas.qml  MeasuringTool.qml  MessageLog.qml  NavigationBar.qml  NavigationHighlight.qml  NavigationInformationView.qml  NavigationRenderer.qml  Nyuki.qml  OverlayFeatureFormDrawer.qml  (+33 more)
src/qml/editorwidgets/: DateTime.qml  ExternalResource.qml  Range.qml  RelationReference.qml  TextEdit.qml  UuidGenerator.qml  ValueMap.qml  ValueRelation.qml
src/qml/editorwidgets/relationeditors/: ordered_relation_editor.qml  relation_editor.qml
src/qml/geometryeditors/: Erase.qml  FillRing.qml  Reshape.qml  SplitFeature.qml  VertexEditor.qml
src/qml/imports/Theme/: QfCalendarPanel.qml  QfToolButtonDrawer.qml  Theme.qml
src/qml/processingparameterwidgets/: distance.qml  enum.qml  number.qml
src/sentry/: CMakeLists.txt  sentry_classic.cpp  sentry_cocoa.mm
src/service/: CMakeLists.txt  smartfieldservice.cpp  smartfieldservice.h
test/: CMakeLists.txt  catch2.h  smartfield_qml_init.h  smartfield_testbase.h  test_attributeformmodel.cpp  test_deltafilewrapper.cpp  test_digitizinglogger.cpp  test_layerobserver.cpp  test_orderedrelationmodel.cpp  test_qml.cpp  test_referencingfeaturelistmodel.cpp
test/qml/: tst_editorwidgets.qml  tst_featureForm.qml  tst_positioning.qml  tst_smartFieldGuide.qml
test/spix/: conftest.py  smoke_test.py
vcpkg/: README.md
(+16 files in other folders)
